# FIRE-chatbot

./: .env  .env.example  Cargo.toml  README.md
src/: cfg.rs  chatbot.rs  client.rs  http_client.rs  lib.rs  llama_client.rs  main.rs  req.rs  server.rs  tele.rs
src/chatbot_stream/: mod.rs  svc.rs
src/notification/: model.rs  svc.rs
src/telegram/: mod.rs  model.rs  svc.rs
