[package]
name = "stockbit-chatbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
dotenvy="0.15.7"
request-http-parser = "0.1.1"
url = "2.5.4"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "http2", "rustls-tls","native-tls-alpn"] }
ring = "0.17.14"
time = "0.3.41"
chrono = "0.4.41"
web-push = "0.11.0"
p256 = {version = "0.13.2", features=["ecdh"]}
aes-gcm = "0.10"
rand = "0.9.1"


